[step2] Map타입 필드 HttpHeader 클래스로 분리, HeaderParser 클래스 유틸 클래스로 변경